@@ -1,4 +1,4 @@
-.\" $Id: fdm.conf.5,v 1.90 2007-10-02 09:21:08 nicm Exp $
+.\" $Id: fdm.conf.5,v 1.91 2007-10-02 09:36:14 nicm Exp $
 .\"
 .\" Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
 .\"
@@ -654,7 +654,7 @@ or
 .Pp
 Caches must be declared before they are used. Items are added to caches using
 the
-.Ic to-cache
+.Ic add-to-cache
 action
 and they are searched using the
 .Ic in-cache
@@ -793,7 +793,7 @@ pattern
 .It Ic stdout
 Write the mail to
 .Em stdout .
-.It Ic to-cache Ar path Ic key Ar key
+.It Ic add-to-cache Ar path Ic key Ar key
 This action adds the string
 .Ar key
 to the cache specified by
